--- a/features/header/molecules/Navigation/atoms/NavLink/NavLink.css
+++ b/features/header/molecules/Navigation/atoms/NavLink/NavLink.css
@@ -3,5 +3,8 @@
 .NavLink {
   font-size: 16px;	
   line-height: 19px;
-  color: #000000;
+  margin-right: 18px;
+  & a {
+    color: #000000;
+  }
 }
