--- a/features/createQuota/organisms/Form/Form.css
+++ b/features/createQuota/organisms/Form/Form.css
@@ -1,1 +1,16 @@
+form.Form {
+  max-width: 640px;
+  margin: 0 auto;
+  box-sizing: border-box;
+  padding: 0 9em;
+}
 
+form.Form input[type="checkbox"] {
+    display: block;
+    margin: 5px 0 0 0;
+}
+
+form.Form input[type="file"] {
+    border: none;
+    padding: 5px 0 0 0;
+}
