--- a/features/quota/organisms/IncomeForm/IncomeForm.css
+++ b/features/quota/organisms/IncomeForm/IncomeForm.css
@@ -1,11 +1,12 @@
 .Form {
   margin-left: auto;
   display: flex;
-  align-items: flex-end;
+  align-items: flex-start;
   justify-content: flex-end;
+  min-height: 110px;
 }
 
-.Button {
-
+div.Button {
+  margin-top: 36px;
   margin-bottom: auto;
 }
