--- a/features/createQuota/organisms/Form/Form.css
+++ b/features/createQuota/organisms/Form/Form.css
@@ -1,4 +1,4 @@
-//TODO:  повесить айдишник на body и стилизовать через него весь ант
+/* TODO:  повесить айдишник на body и стилизовать через него весь ант */
 form.Form {
   margin: 0 auto;
   box-sizing: border-box;
