--- a/ui/molecules/TextАrea/TextArea.css
+++ b/ui/molecules/TextАrea/TextArea.css
@@ -1,20 +1,17 @@
-/* .ant-input.ant-input {
-  &:hover {
-    border: 1px solid green;
-  }
-} */
-
-.ant-input.ant-input {
+.textarea.textarea {
   box-sizing: border-box;
+  max-width: 480px;
+  min-height: 60px;
+  font: var(--text16-24);
+  color: #151833;
+  border: none;
+  box-shadow: 0 0 0 1px #d9d9d9;
 
-  outline-color: transparent;
+  &:hover {
+    box-shadow: 0 0 0 1px #3C54EE;
+  }
+
+  &:focus {
+    box-shadow: 0 0 0 2px #3C54EE;
+  }
 }
-
-.ant-input.ant-input:hover {
-    border: 1px solid #3C54EE;
-  }
-
-.ant-input.ant-input:focus {
-    border: 2px solid #3C54EE;
-  }
-
