--- a/features/createQuota/organisms/Form/Form.css
+++ b/features/createQuota/organisms/Form/Form.css
@@ -1,39 +1,38 @@
-/* TODO:  повесить айдишник на body и стилизовать через него весь ант */
-form.Form {
+.Form.Form {
   box-sizing: border-box;
   margin: 0 auto;
 }
 
-form.Form div {
+.Form.Form div {
     width: 390px;
 }
 
-form.Form div.main {
+.Form.Form .main.main {
     width: 100%;
     padding: 48px 80px 0;
 }
 
-form.Form div.companyField {
+.Form.Form .companyField.companyField {
     width: 100%;
     padding: 30px 80px;
     margin-bottom: 28px;
 }
 
-form.Form div.submitButtonField {
+.Form.Form .submitButtonField.submitButtonField {
     padding: 0 80px;
 }
 
-form.Form input[type="checkbox"] {
+.Form.Form input[type="checkbox"] {
     display: block;
     margin: 5px 0 0 0;
 }
 
-form.Form input[type="file"] {
+.Form.Form input[type="file"] {
     margin: 4px 0;
     border: none;
 }
 
-form.Form textarea {
+.Form.Form textarea {
     width: 100%;
     padding: 4px 11px;
     resize: none;
@@ -41,6 +40,6 @@ form.Form textarea {
     border-radius: 4px;
 }
 
-form.Form input[role="switch"] {
+.Form.Form input[role="switch"] {
     width: 300px;
 }
