--- a/ui/config.css
+++ b/ui/config.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,500,600,700&subset=cyrillic');
 
+*, *::before , *::after {
+  box-sizing: border-box;
+}
+
 body {
   /* fonts */
   --fontFamily: 'IBM Plex Sans', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
@@ -24,6 +28,12 @@ body {
   }
 
   /* colors */
+  --color-primary: #3C54EE;
+  --color-success: #19CD92;
+  --color-link: #2D47EA;
+  --color-danger: #F11635;
+  --color-highlight: #FFD46D;
+
   --text-color-primary: #151833;
   --text-color-secondary: #616681;
   --link-color: #2D47EA;
