--- a/ui/config.css
+++ b/ui/config.css
@@ -23,11 +23,19 @@ body {
     --title-bold: bold 16px/24px var(--fontFamily);
   }
 
-  /* colors */
+  /* colors-text */
   --text-color-primary: #151833;
   --text-color-secondary: #616681;
   --link-color: #2D47EA;
   --link-color-underline: rgba(45, 71, 234, 0.5);
+
+  /* colors */
+  --color-primary: #3C54EE;
+  --color-hover:  #354AD4; 
+  --color-success: #19CD92;
+  --color-link: #2D47EA;
+  --color-danger: #F11635;
+  --color-highlight: #FFD46D;
 
   /* styles */
   font-family: var(--fontFamily);
