--- a/ui/molecules/Input/Input.css
+++ b/ui/molecules/Input/Input.css
@@ -1,6 +1,8 @@
 .ant-input.ant-input {
   box-sizing: border-box;
   max-width: 480px;
+  height: auto;
+  padding: 12px 44px 12px 16px;
   font: var(--text16-24);
   color: #151833;
   border: none;
