--- a/ui/molecules/RadioGroup/RadioGroup.css
+++ b/ui/molecules/RadioGroup/RadioGroup.css
@@ -1,10 +1,3 @@
-.controls.controls {
-  & .ant-radio + span {
-    width: auto;
-    padding: 16px;
-  }
-}
-
 .ant-radio-group.ant-radio-group {
   display: flex;
 
@@ -24,9 +17,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 96px;
-    height: 40px;
-    padding: 0;
+    width: auto;
+    padding: 8px 16px;
     font: var(--text16-24);
     color: #000;
     text-align: center;
