--- a/ui/config.css
+++ b/ui/config.css
@@ -32,15 +32,14 @@ body {
   --color-primary: #3C54EE;
   --color-hover:  #354AD4; 
   --color-success: #19CD92;
-  --color-link: #2D47EA;
   --color-danger: #F11635;
   --color-highlight: #FFD46D;
 
   --text-color-primary: #151833;
   --text-color-secondary: #616681;
   
-  --link-color: #2D47EA;
-  --link-color-underline: rgba(45, 71, 234, 0.5);
+  --color-link: #2D47EA;
+  --color-link-underline: rgba(45, 71, 234, 0.5);
 
   /* styles */
   font-family: var(--fontFamily);
