--- a/features/main/claim/organisms/ClaimForm/ClaimForm.css
+++ b/features/main/claim/organisms/ClaimForm/ClaimForm.css
@@ -1,27 +1,26 @@
 .ClaimForm {
   position: relative;
   max-width: 800px;
-  padding: 0;
+  padding: 0 0 112px 0;
   margin: 0 auto;
   text-align: left;
   background-color: #fff;
 }
 
-
 .title {
-  font: var(--title-medium);
   margin: 0 0 24px 0;
+  font: var(--title-medium);
 }
 
 .article {
+  position: relative;
   padding: 48px 160px 56px 160px;
   font: var(--text16-24);
-  position: relative;
 
   &::after {
     position: absolute;
-    left: 0;
     bottom: 0;
+    left: 0;
     width: 100%;
     height: 1px;
     content: '';
@@ -36,10 +35,17 @@
     }
   }
 
+  & .button.button {
+    font: var(--text18-28);
+    margin: 0 auto;
+    width: 480px;
+    max-width: 480px;
+}
+
 }
 
 .label {
-  margin: 0 0 8px 0;
+  margin: 24px 0 8px 0;
   color: #151833;
 }
 
