--- a/features/main/claim/organisms/ClaimForm/ClaimForm.css
+++ b/features/main/claim/organisms/ClaimForm/ClaimForm.css
@@ -5,6 +5,10 @@
   margin: 0 auto;
   text-align: left;
   background-color: #fff;
+
+  @media (max-width: 767px) {
+    padding: 0 0 96px 0;    
+  }
 }
 
 .title {
@@ -36,11 +40,20 @@
   }
 
   & .button.button {
-    font: var(--text18-28);
-    margin: 0 auto;
     width: 480px;
     max-width: 480px;
+    margin: 0 auto;
+    font: var(--text18-28);
+
+  @media (max-width: 767px) {
+    width: 100%;
+    max-width: 328px;
+  }
 }
+
+  @media (max-width: 767px) {
+    padding: 32px 16px 24px 16px;
+  }
 
 }
 
