--- a/features/main/layout/organisms/Footer/atoms/Partner/Partner.css
+++ b/features/main/layout/organisms/Footer/atoms/Partner/Partner.css
@@ -1,5 +1,17 @@
 .partner {
+  display: flex;
+  align-items: center;
   padding: 12px 16px;
+  margin-right: 16px;
   border: 1px solid #E0E0E0;
-  border-radius: 5px;
+  border-radius: 10px;
+
+  &:last-of-type {
+    margin-right: 0;
+  }
+}
+
+.text {
+  font: var(--text12-16);
+  color: #616681;
 }
