--- a/features/main/layout/organisms/Footer/atoms/Partner/Partner.css
+++ b/features/main/layout/organisms/Footer/atoms/Partner/Partner.css
@@ -1,6 +1,7 @@
 .partner {
   display: flex;
   align-items: center;
+  width: calc(100% / 3);
   padding: 12px 16px;
   margin-right: 16px;
   border: 1px solid #E0E0E0;
@@ -14,4 +15,5 @@
 .text {
   font: var(--text12-16);
   color: #616681;
+  margin-right: 20px;
 }
