--- a/features/main/layout/organisms/Footer/organisms/MediumFooter/MediumFooter.css
+++ b/features/main/layout/organisms/Footer/organisms/MediumFooter/MediumFooter.css
@@ -1,6 +1,10 @@
 .footer {
   padding: 24px 48px 32px 48px;
   background-color: #FAF9F7;
+
+  @media (max-width: 767px) {
+    padding: 16px 16px 20px 16px;
+  }
 }
 
 .white {
