--- a/features/main/layout/organisms/Footer/organisms/MediumFooter/organisms/TopRow/TopRow.css
+++ b/features/main/layout/organisms/Footer/organisms/MediumFooter/organisms/TopRow/TopRow.css
@@ -3,4 +3,16 @@
   align-items: center;
   justify-content: space-between;
   margin-bottom: 32px;
+   
+  @media (max-width: 767px) {
+    flex-direction: column;
+  }
+}
+
+.logo {
+  @media (max-width: 767px) {
+    align-self: flex-start;
+    height: 40px;
+    margin-bottom: 20px;
+  }
 }
