--- a/ui/molecules/Checkbox/Checkbox.css
+++ b/ui/molecules/Checkbox/Checkbox.css
@@ -1,25 +1,14 @@
+/* Checked */
 .ant-checkbox-checked.ant-checkbox-checked .ant-checkbox-inner {
+  background-color: var(--color-primary) !important;
   border-width: 2px;
 }
 
+/* Disabled */
 .ant-checkbox-disabled.ant-checkbox-disabled .ant-checkbox-inner {
   background-color: #E8E9F2;
   opacity: 0.4;
 }
-
-.ant-checkbox-wrapper.ant-checkbox-wrapper:hover .ant-checkbox-inner,
-.ant-checkbox.ant-checkbox:hover .ant-checkbox-inner,
-.ant-checkbox-input.ant-checkbox-input:focus + .ant-checkbox-inner {
-  border-width: 2px;
-}
-
-
-.ant-checkbox-inner.ant-checkbox-inner {
-  &::after {
-    border: 2px solid #fff;
-  }
-}
-
 .ant-checkbox-disabled.ant-checkbox-disabled.ant-checkbox-checked .ant-checkbox-inner {
   background-color: var(--color-primary);
   border-color: var(--color-primary) !important;
@@ -29,3 +18,18 @@
     border-color: white;
   }
 }
+
+/* Common */
+.ant-checkbox-inner.ant-checkbox-inner {
+  &::after {
+    border: 2px solid #fff;
+  }
+}
+
+.ant-checkbox-wrapper.ant-checkbox-wrapper:hover .ant-checkbox-inner,
+.ant-checkbox.ant-checkbox:hover .ant-checkbox-inner,
+.ant-checkbox-input.ant-checkbox-input:focus + .ant-checkbox-inner {
+  border-width: 2px;
+}
+
+
