add global style for bottom margin of form elements

--- a/ui/antd-custom.less
+++ b/ui/antd-custom.less
@@ -5,18 +5,17 @@
 @error-color: #F11635; // error state color
 @background-color-light : hsv(0, 0, 98%); // background of header and selected item
 @background-color-base : hsv(0, 0, 96%); // Default grey background color
-
 // FONTS
 @font-size-base: 16px; // major text font size
-
 // STATES
 // Disabled
 @disabled-color : fade(#000, 25%);
 @disabled-bg : fade(@primary-color, 60%); // equivalent to opacity: 0.4;
 @disabled-color-dark : fade(#fff, 35%);
-
 // COMPONENTS
 // Checkbox
 @checkbox-size : 20px;
 @checkbox-color : @primary-color;
 @checkbox-check-color : #fff;
+// Form
+@form-item-margin-bottom: 24px;
