--- a/ui/organisms/EmergingFormElement/EmergingFormElement.css
+++ b/ui/organisms/EmergingFormElement/EmergingFormElement.css
@@ -7,6 +7,11 @@
   padding: 30px;
   background-color: #F7F7F9;
 
+  & > *:last-child {
+    margin-bottom: 0;
+  }
+
+  /* pointer */
   &::before {
     position: absolute;
     top: -16px;
@@ -16,10 +21,6 @@
     height: 16px;
     content: '';
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='16'%3E%3Cdefs%3E%3ClinearGradient id='a' x1='50%25' x2='50%25' y1='0%25' y2='100%25'%3E%3Cstop offset='0%25' stop-color='%23D6DCE9'/%3E%3Cstop offset='100%25' stop-color='%23F7F7F9'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cpath fill='url(%23a)' fill-rule='evenodd' d='M211 0a16 16 0 0 0 16 16h-32a16 16 0 0 0 16-16z' transform='translate(-195)'/%3E%3C/svg%3E");
-  }
-
-  & > *:last-child {
-    margin-bottom: 0;
   }
 }
 
