--- a/ui/molecules/Combobox/Combobox.css
+++ b/ui/molecules/Combobox/Combobox.css
@@ -82,7 +82,19 @@
     display: none;
   }
 }
-/* 
-.ant-select-dropdown-placement-bottomLeft {
-  display: none;
-} */
+
+.ant-select-dropdown-menu-item-group-title.ant-select-dropdown-menu-item-group-title {
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  height: auto;
+  padding-bottom: 4px;
+  font: var(--text14-20);
+  color: #82839B;
+  background-color: #fff;
+}
+
+.not-found {
+  font: var(--text14-20);
+  color: #82839B;
+}
