add custom values for antd styles

--- a/ui/antd-custom.less
+++ b/ui/antd-custom.less
@@ -6,7 +6,13 @@
 @background-color-light : hsv(0, 0, 98%); // background of header and selected item
 @background-color-base : hsv(0, 0, 96%); // Default grey background color
 // FONTS
+@heading-color          : #151833;
+@text-color             : #151833;
+@text-color-secondary   : #82839B;
 @font-size-base: 16px; // major text font size
+//OTHER
+@border-radius-base     : 8px;
+@border-radius-sm       : 4px;
 // STATES
 // Disabled
 @disabled-color : fade(#000, 25%);
