add margin for 'getting sms code' block

--- a/ui/organisms/ModalSmsConfirm/PopupSmsConfirm.css
+++ b/ui/organisms/ModalSmsConfirm/PopupSmsConfirm.css
@@ -11,6 +11,10 @@
   display: flex;
   align-items: center;
 
+  & > * {
+    margin-bottom: 24px;
+  }
+
   & > *:first-child {
     margin-right: 16px;
   }
