--- a/features/common/modal/modals/MainSignUp/MainSignUp.css
+++ b/features/common/modal/modals/MainSignUp/MainSignUp.css
@@ -12,7 +12,7 @@
 }
 
 .secondaryText {
-  margin-bottom: 24px;
+  margin: 0 0 24px 0;
   font: var(--text14-20);
   color: #82839B;
 }
@@ -29,4 +29,17 @@
 
 .input {
   margin-bottom: 8px;
+}
+
+.mainButton {
+  margin-top: 24px;
+  margin-bottom: 16px;
+}
+
+.socialButton {
+  margin-bottom: 56px;
+}
+
+.footer {
+  font: var(--text14-20);
 }
