--- a/features/main/claim/organisms/firstStep/organisms/ClaimForm/ClaimForm.css
+++ b/features/main/claim/organisms/firstStep/organisms/ClaimForm/ClaimForm.css
@@ -60,7 +60,13 @@
 
 .label {
   margin: 24px 0 8px 0;
+  line-height: 1.5;
   color: #151833;
+}
+
+.emergingLabel {
+  z-index: 1;
+  margin-top: 0;
 }
 
 .sectondaryText {
