--- a/ui/organisms/EmergingFormElement/EmergingFormElement.css
+++ b/ui/organisms/EmergingFormElement/EmergingFormElement.css
@@ -5,6 +5,7 @@
   justify-content: center;
   width: 100%;
   padding: 30px;
+  margin-bottom: 26px;
   background-color: #F7F7F9;
 
   & > *:last-child {
