--- a/features/main/layout/organisms/Footer/organisms/PrimaryFooter/atoms/Partner/Partner.css
+++ b/features/main/layout/organisms/Footer/organisms/PrimaryFooter/atoms/Partner/Partner.css
@@ -1,6 +1,7 @@
 .partner {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   width: calc(100% / 3);
   padding: 12px 16px;
   margin-right: 16px;
@@ -13,7 +14,11 @@
 }
 
 .text {
-  margin-right: 20px;
+  margin: 0 20px 0 0;
   font: var(--text12-16);
   color: #616681;
+}
+
+.logo {
+  max-height: 64px;
 }
