feat(global): add primary footer mobile styles

--- a/features/main/layout/organisms/Footer/organisms/PrimaryFooter/organisms/TopRow/TopRow.css
+++ b/features/main/layout/organisms/Footer/organisms/PrimaryFooter/organisms/TopRow/TopRow.css
@@ -12,4 +12,15 @@
       margin-right: 0;
     }
   }
+
+  @media (max-width: 767px) {
+    justify-content: space-between;
+    width: 100%;
+  }
+}
+
+.logo {
+    @media (max-width: 767px) {
+    display: none;
+  }
 }
