--- a/features/main/layout/organisms/Footer/organisms/PrimaryFooter/atoms/Partner/Partner.css
+++ b/features/main/layout/organisms/Footer/organisms/PrimaryFooter/atoms/Partner/Partner.css
@@ -11,6 +11,16 @@
   &:last-of-type {
     margin-right: 0;
   }
+
+  @media (max-width: 767px) {
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 12px;
+
+    &:last-of-type {
+      margin-bottom: 0;
+    }
+  }
 }
 
 .text {
