--- a/features/main/layout/organisms/Header/organisms/PrimaryHeader/atoms/BurgerButton/BurgerButton.css
+++ b/features/main/layout/organisms/Header/organisms/PrimaryHeader/atoms/BurgerButton/BurgerButton.css
@@ -1,5 +1,24 @@
-.button {
+.openButton {
+  max-height: 24px;
+  font-size: 0;
+  cursor: pointer;
+  background-color: transparent;
+  background-image: url('/static/images/icons/24x24_burger-menu.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  border: none;
+}
+
+.closeButton {
   display: none;
+  max-height: 24px;
+  font-size: 0;
+  cursor: pointer;
+  background-color: transparent;
+  background-image: url('/static/images/icons/24x24_close_light.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  border: none;
 
   @media (max-width: 767px) {
     display: block;
