--- a/features/main/layout/organisms/Header/organisms/PrimaryHeader/atoms/BurgerButton/BurgerButton.css
+++ b/features/main/layout/organisms/Header/organisms/PrimaryHeader/atoms/BurgerButton/BurgerButton.css
@@ -1,4 +1,5 @@
 .openButton {
+  width: 24px;
   max-height: 24px;
   font-size: 0;
   cursor: pointer;
@@ -7,20 +8,4 @@
   background-repeat: no-repeat;
   background-position: center;
   border: none;
-}
-
-.closeButton {
-  display: none;
-  max-height: 24px;
-  font-size: 0;
-  cursor: pointer;
-  background-color: transparent;
-  background-image: url('/static/images/icons/24x24_close_light.svg');
-  background-repeat: no-repeat;
-  background-position: center;
-  border: none;
-
-  @media (max-width: 767px) {
-    display: block;
-  }
 }
