--- a/features/main/layout/organisms/Header/organisms/PrimaryHeader/organisms/Menu/Menu.css
+++ b/features/main/layout/organisms/Header/organisms/PrimaryHeader/organisms/Menu/Menu.css
@@ -1,8 +1,57 @@
-.menu {
+.menu { 
+  position: relative;
   display: flex; 
-  align-items: center; 
+  align-items: center;
+
+  @media (max-width: 767px) {
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 9999;
+    flex-direction: column;
+    align-items: flex-start;
+    min-width: 288px;
+    height: 100vh;
+    padding: 16px 16px 0 24px;
+    background-color: white;
+    box-shadow: 0 0 8px 0 rgba(63,63,68,0.04), 0 0 20px 0 rgba(63,63,68,0.12);
+    opacity: 1;
+  }
 }
 
 .link {
   margin-right: 32px;
+  white-space: nowrap;
+
+  @media (max-width: 767px) {
+    width: 100%;
+    padding: 11px 0 12px 0;
+    margin-right: 0;
+    border-top: 1px solid rgba(21,24,51,0.08);
+
+    &:last-of-type {
+      margin-bottom: 24px;
+      border-bottom: 1px solid rgba(21,24,51,0.08);
+
+    }
+  }
+}
+
+.closeButton {
+  display: none;
+  align-self: flex-end;
+  width: 24px;
+  height: 24px;
+  margin-bottom: 24px;
+  font-size: 0;
+  cursor: pointer;
+  background-color: transparent;
+  background-image: url('/static/images/icons/24x24_close_light.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  border: none;
+
+  @media (max-width: 767px) {
+    display: block;
+  }
 }
