--- a/features/main/layout/organisms/Header/organisms/PrimaryHeader/organisms/Menu/Menu.css
+++ b/features/main/layout/organisms/Header/organisms/PrimaryHeader/organisms/Menu/Menu.css
@@ -15,7 +15,6 @@
     padding: 16px 16px 0 24px;
     background-color: white;
     box-shadow: 0 0 8px 0 rgba(63,63,68,0.04), 0 0 20px 0 rgba(63,63,68,0.12);
-    opacity: 1;
   }
 }
 
@@ -24,6 +23,7 @@
   white-space: nowrap;
 
   @media (max-width: 767px) {
+    position: relative;
     width: 100%;
     padding: 11px 0 12px 0;
     margin-right: 0;
@@ -33,6 +33,21 @@
       margin-bottom: 24px;
       border-bottom: 1px solid rgba(21,24,51,0.08);
 
+    }
+
+    &::after {
+      position: absolute;
+      top: calc(50% - 12px);
+      right: 0;
+      display: block;
+      width: 24px;
+      height: 24px;
+      content: '';
+      background-color: transparent;
+      background-image: url('/static/images/icons/24x24_arrow-back.svg');
+      background-repeat: no-repeat;
+      background-position: center;
+      transform: rotate(180deg) scale(0.7);
     }
   }
 }
