--- a/features/main/layout/organisms/Header/organisms/PrimaryHeader/organisms/Menu/Menu.css
+++ b/features/main/layout/organisms/Header/organisms/PrimaryHeader/organisms/Menu/Menu.css
@@ -15,6 +15,8 @@
     padding: 16px 16px 0 24px;
     background-color: white;
     box-shadow: 0 0 8px 0 rgba(63,63,68,0.04), 0 0 20px 0 rgba(63,63,68,0.12);
+    transition: transform 250ms ease-out;
+    will-change: transform;
   }
 }
 
@@ -70,3 +72,12 @@
     display: block;
   }
 }
+ 
+.animEntered {
+  transform: translateX(0);
+}
+
+.animExiting, .animEntering {
+  transform: translateX(100%);
+}
+
