--- a/features/main/layout/organisms/Header/organisms/PrimaryHeader/atoms/BurgerButton/BurgerButton.css
+++ b/features/main/layout/organisms/Header/organisms/PrimaryHeader/atoms/BurgerButton/BurgerButton.css
@@ -4,8 +4,8 @@
   font-size: 0;
   cursor: pointer;
   background-color: transparent;
-  background-image: url('/static/images/icons/24x24_burger-menu.svg');
+  background-image: url('/static/images/icons/sprite.svg');
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: 0 -168px;
   border: none;
 }
