--- a/features/main/layout/organisms/Header/organisms/PrimaryHeader/organisms/Menu/Menu.css
+++ b/features/main/layout/organisms/Header/organisms/PrimaryHeader/organisms/Menu/Menu.css
@@ -46,11 +46,16 @@
       height: 24px;
       content: '';
       background-color: transparent;
-      background-image: url('/static/images/icons/24x24_arrow-back.svg');
+      background-image: url('/static/images/icons/sprite.svg');
       background-repeat: no-repeat;
-      background-position: center;
-      transform: rotate(180deg) scale(0.7);
+      background-position: 0 -96px;
     }
+
+      &:hover {
+        &::after {
+          background-position: 0 -72px;
+        }
+      }
   }
 }
 
@@ -63,9 +68,9 @@
   font-size: 0;
   cursor: pointer;
   background-color: transparent;
-  background-image: url('/static/images/icons/24x24_close_light.svg');
+  background-image: url('/static/images/icons/sprite.svg');
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: 0 -240px;
   border: none;
 
   @media (max-width: 767px) {
