--- a/ui/atoms/Button/Button.css
+++ b/ui/atoms/Button/Button.css
@@ -1,11 +1,11 @@
 .ant-btn.ant-btn {
   display: block;
-
   max-width: 200px;
   height: auto;
   
   text-align: center;
   white-space: normal;
+  border: none;
 
   &::after {
     display: none !important; 
@@ -26,15 +26,9 @@
   background-color: var(--color-primary);
   box-shadow: inset 0 1px 1px 0.5px rgba(255, 255, 255, 0.1), 0 3px 8px rgba(60, 84, 238, 0.2);
 
-
-  &:hover, &:focus {
-    color: #ffffff;
-    background-color: #354AD4;
-  }
-
   &:active {
     color: #ffffff;
-    background-color: #2F41BA;
+    background-color: #354AD4;
   }
 
 
