--- a/ui/atoms/Input/Input.css
+++ b/ui/atoms/Input/Input.css
@@ -1,3 +1,11 @@
+.input::-webkit-outer-spin-button,
+.input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
+
+.input[type='number'] {
+    -moz-appearance: textfield;
+}
 .label {
   display: block;
   margin-bottom: 8px;
