--- a/features/common/modal/index.css
+++ b/features/common/modal/index.css
@@ -2,6 +2,7 @@
   position: fixed;
   top: 50%;
   left: 50%;
+  max-width: 400px;
   min-height: 400px;
   padding: 16px;
   background-color: #fff;
