--- a/features/login/features/signUp/organisms/Modal/SignUp.css
+++ b/features/login/features/signUp/organisms/Modal/SignUp.css
@@ -35,9 +35,6 @@
 .button.button {
   width: 100%;
   max-width: 100%;
-  margin: 24px 0 32px 0;
-}
-
-.footer {
-  font: var(--text14-20);
+  height: 48px;
+  margin: 16px 0 32px 0;
 }
