--- a/ui/config.css
+++ b/ui/config.css
@@ -19,7 +19,7 @@
 body {
   /* fonts */
   --fontFamily: 'IBM Plex Sans', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-  --fontFamily-title: Muller Regular, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  --fontFamily-title: 'Muller Regular', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 
   --title-extra: 48px/56px var(--fontFamily-title);
   --title-regular: 40px/48px var(--fontFamily-title);
