--- a/features/main/layout/organisms/Header/organisms/PrimaryHeader/organisms/Navigation/Navigation.css
+++ b/features/main/layout/organisms/Header/organisms/PrimaryHeader/organisms/Navigation/Navigation.css
@@ -35,7 +35,10 @@
     &:last-of-type {
       margin-bottom: 24px;
       border-bottom: 1px solid rgba(21,24,51,0.08);
+    }
 
+    &:last-of-type:focus {
+      border-bottom: 1px solid rgba(21,24,51,0.08);
     }
   }
 }
@@ -57,4 +60,3 @@
     display: block;
   }
 }
- 
