--- a/features/login/features/signUp/organisms/Modal/SignUp.css
+++ b/features/login/features/signUp/organisms/Modal/SignUp.css
@@ -4,6 +4,10 @@
   padding: 0 24px;
   background-color: #fff;
   border: none;
+
+  @media (max-width: 767px) {
+    padding: 0 16px;
+  }
 }
 
 .title {
