--- a/features/login/organisms/Footer/Footer.css
+++ b/features/login/organisms/Footer/Footer.css
@@ -1,6 +1,7 @@
 .footer {
   position: relative;
-  padding: 24px 40px 0;
+  display: flex;
+  padding: 24px 24px 0;
   font: var(--text14-20);
   
   &::after {
@@ -16,6 +17,16 @@
   @media (max-width: 767px) {
     padding: 24px 16px 32px;
   }
+}
+
+.text {
+  margin: 0;
+}
+
+.logo {
+  width: 26px;
+  height: 40px;
+  margin-right: 12px;
 }
 
 .link.link {
