refactor(ui): footer
META: y

--- a/ui/organisms/Footer/PrimaryFooter/PrimaryFooter.css
+++ b/ui/organisms/Footer/PrimaryFooter/PrimaryFooter.css
@@ -10,3 +10,13 @@
   display: flex;
   justify-content: space-between;
 }
+
+.top {
+  margin-bottom: 40px;
+}
+
+.logo {
+    @media (max-width: 767px) {
+    display: none;
+  }
+}
