--- a/ui/organisms/Footer/components/Login/Login.css
+++ b/ui/organisms/Footer/components/Login/Login.css
@@ -1,11 +1,8 @@
-.top {
-  margin-bottom: 40px;
-}
-
 .buttons {
   display: flex;
 
   & .button {
+    align-self: flex-start;
     margin-right: 12px;
 
     &:last-of-type {
@@ -16,11 +13,5 @@
   @media (max-width: 767px) {
     justify-content: space-between;
     width: 100%;
-  }
-}
-
-.logo {
-    @media (max-width: 767px) {
-    display: none;
   }
 }
