--- a/ui/organisms/Footer/components/Partners/Partners.css
+++ b/ui/organisms/Footer/components/Partners/Partners.css
@@ -1,3 +1,13 @@
+.middle {
+  display: flex;
+  margin-bottom: 32px;
+
+  @media (max-width: 767px) {
+    flex-direction: column;
+  }
+}
+
+
 .partner {
   display: flex;
   align-items: center;
