--- a/features/client/organisms/Header/Header.css
+++ b/features/client/organisms/Header/Header.css
@@ -3,8 +3,8 @@
   align-items: center;
   justify-content: space-between;
   padding: 8px 16px;
-  background-color: #FAF9F7;
-  border-bottom: 1px solid #EDEDEF;
+  background-color: var(--background-color);
+  border-bottom: 1px solid rgba(21,24,51,0.08);
 }
 
 .logo {
