--- a/features/main/layout/organisms/Header/organisms/SecondaryHeader/SecondaryHeader.css
+++ b/features/main/layout/organisms/Header/organisms/SecondaryHeader/SecondaryHeader.css
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 8px 16px;
-  background-color: #FAF9F7;
+  background-color: var(--background-color);
   border-bottom: 1px solid #EDEDEF;
 }
 
