--- a/ui/organisms/Footer/SecondaryFooter/SecondaryFooter.css
+++ b/ui/organisms/Footer/SecondaryFooter/SecondaryFooter.css
@@ -1,6 +1,6 @@
 .footer {
   padding: 24px 48px 32px 48px;
-  background-color: #FAF9F7;
+  background-color: var(--background-color);
 
   @media (max-width: 767px) {
     padding: 16px 16px 20px 16px;
