--- a/features/client/organisms/Header/Header.css
+++ b/features/client/organisms/Header/Header.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   padding: 8px 16px;
   background-color: var(--background-color);
-  border-bottom: 1px solid rgba(21,24,51,0.08);
+  border-bottom: 1px solid var(--divider-color);
 }
 
 .logo {
