--- a/features/login/organisms/Footer/Footer.css
+++ b/features/login/organisms/Footer/Footer.css
@@ -11,7 +11,7 @@
     width: 400px;
     height: 1px;
     content: '';
-    background-color: rgba(21,24,51,0.08);
+    background-color: var(--divider-color);
   }
 
   @media (max-width: 767px) {
