--- a/features/main/layout/organisms/Header/organisms/PrimaryHeader/organisms/Navigation/Navigation.css
+++ b/features/main/layout/organisms/Header/organisms/PrimaryHeader/organisms/Navigation/Navigation.css
@@ -30,15 +30,15 @@
     width: 100%;
     padding: 11px 0 12px 0;
     margin-right: 0;
-    border-top: 1px solid rgba(21,24,51,0.08);
+    border-top: 1px solid var(--divider-color);
 
     &:last-of-type {
       margin-bottom: 24px;
-      border-bottom: 1px solid rgba(21,24,51,0.08);
+      border-bottom: 1px solid var(--divider-color);
     }
 
     &:last-of-type:focus {
-      border-bottom: 1px solid rgba(21,24,51,0.08);
+      border-bottom: 1px solid var(--divider-color);
     }
   }
 }
