--- a/ui/config.css
+++ b/ui/config.css
@@ -52,6 +52,7 @@ body {
   --text-color-secondary: #616681;
 
   --background-color: #faf9f7;
+  --divider-color: 	rgba(21,24,51,0.08);
   
   --color-link: #2D47EA;
   --color-link-underline: rgba(45, 71, 234, 0.5);
