--- a/ui/organisms/Footer/Footer.css
+++ b/ui/organisms/Footer/Footer.css
@@ -2,5 +2,5 @@
   right: 0;
   bottom: 0;
   left: 0;
-  border-top: 1px solid rgba(21,24,51,0.08);
+  border-top: 1px solid var(--divider-color);
 }
