--- a/features/client/features/claims/molecules/ClaimStatus/ClaimStatus.css
+++ b/features/client/features/claims/molecules/ClaimStatus/ClaimStatus.css
@@ -1,9 +1,14 @@
 .container {
   display: grid;
-  grid-template-rows: auto;
+  grid-template-rows: auto auto;
   grid-template-columns: 16px auto;
-  margin: 16px 0;
   column-gap: 8px;
+  row-gap: 16px;
+  margin-top: 16px;
+
+  & *:last-child {
+    grid-column: 1 / 3;
+  }
 }
 
 .point {
