--- a/features/client/organisms/Layout/Layout.css
+++ b/features/client/organisms/Layout/Layout.css
@@ -2,4 +2,8 @@
   padding-top: 40px;
   padding-bottom: 120px;
   background-color: var(--background-color);
+
+  @media (--mediumDown) {
+    padding-bottom: 80px;
+  }
 }
