--- a/ui/config.css
+++ b/ui/config.css
@@ -65,3 +65,7 @@ body {
 /* custom media queries */
 @custom-media --smallDown (max-width: 767px);
 @custom-media --mediumDown (max-width: 959px);
+
+#__next {
+  overflow-x: hidden;
+}
