--- a/features/client/features/claims/molecules/ClaimHeader/ClaimHeader.css
+++ b/features/client/features/claims/molecules/ClaimHeader/ClaimHeader.css
@@ -13,6 +13,10 @@
   column-gap: 24px;
   row-gap: 4px;
   align-items: center;
+
+  @media (--mediumDown) {
+    grid-column-gap: 16px;
+  }
 }
 
 .title {
