--- a/features/client/features/claims/organisms/Claim/Claim.css
+++ b/features/client/features/claims/organisms/Claim/Claim.css
@@ -2,4 +2,8 @@
   padding: 20px 24px 24px 24px;
   background: white;
   box-shadow: 0 0 0 1px rgba(63,63,68,0.03), 0 1px 3px 0 rgba(63,63,68,0.16);
+
+  @media (--mediumDown) {
+    padding: 16px 16px 20px 16px;
+  }
 }
