--- a/features/client/features/claims/organisms/Title/Title.css
+++ b/features/client/features/claims/organisms/Title/Title.css
@@ -7,6 +7,16 @@
   & * {
     margin: 0;
   }
+
+  @media (--mediumDown) {
+    flex-direction: column;
+    align-items: flex-start;
+    padding-left: 16px;
+
+    & *:first-child {
+      margin-bottom: 16px;
+    }
+  }
 }
 
 .title {
